--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "nodemon": "^2.0.20",
     "passport": "^0.6.0",
     "passport-http-bearer": "^1.0.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "socket.io": "^4.6.1",
+    "socket.io-client": "^4.6.1"
   }
 }
